[package]
name = "iced_mark"
version = "0.1.0"
authors = ["Diego Rosario <diegorosario2013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

pulldown-cmark = "0.8.0"
math-text-transform = "0.1.1"
iced = { version = "0.2.0", features = ["image"] }
